# amman

./: .gitignore  .prettierrc  README.md  package.json  tsconfig.json  typedoc.json
.github/workflows/: build-and-test.yml
amman/: README.md  package.json  tsconfig.json
amman-client/: README.md  package.json  typedoc.json
amman-client/src/: amman-client.ts  api.ts  types.ts
amman-common/: README.md  package.json  typedoc.json
amman-common/src/: amman-common.ts
amman-core/: package.json  typedoc.json
amman-mod/program/: Cargo.toml  rustfmt.toml
amman-mod/program/src/: entrypoint.rs  error.rs  ixs.rs  lib.rs  processor.rs
amman-mod/program/src/utils/: accounts.rs  asserts.rs  mod.rs
amman-mod/program/tests/: 01_add_account.rs
amman-mod/program/tests/utils/: accounts.rs  mod.rs
amman-rust-client/: Cargo.toml
amman-rust-client/src/: blocking.rs  client.rs  errors.rs  lib.rs  payloads.rs
amman-tests/: README.md  package.json
amman-tests/tests/: amman-client.ts  socket-communication.ts
amman/src/: amman.browser.ts  amman.ts  api.ts  types.ts
client-rust/: Cargo.toml
client-rust/src/: amman_config.rs  blocking.rs  client.rs  consts.rs  errors.rs  lib.rs  payloads.rs
client-rust/src/test_utils/: consts.rs  fs.rs  mod.rs
client-rust/tests/: blocking_accounts.rs
client-rust/tests/utils/: mod.rs
docs/: index.html
docs/assets/: highlight.css  search.js
docs/classes/: AddressLabels.html  Amman.html  AmmanMockStorageDriver.html  ConfirmedTransactionDetails.html  TokenBalances.html
docs/interfaces/: Change.html
sh/: update-docs
src/: amman.browser.ts  amman.ts  api.ts  types.ts  utils.ts
(+169 files in other folders)
