[package]
name = "amman-rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0.31"
# TODO: which features do we really need?
tokio = { version = "1.19", features = ["full"] }
